# qmin

./: .gitignore  README.md  pyproject.toml
classical/: __init__.py  detection_head.py  layers.py  loss.py  optim.py
data/: __init__.py  kitti.py  mnist.py
experiments/: barren_plateau_depth.py  grover_amplification.py  ibm_runner.py  state_evolution.py  training_demo.py
pipeline/: __init__.py  classifier.py  detector.py  distillation.py  hybrid_layer.py  quantum_reranker.py  trainer.py
qsim/: __init__.py  circuit.py  density_matrix.py  gates.py  gradient.py  measurement.py  noise.py  observables.py  parameters.py  qasm_export.py  statevector.py  utils.py
quantum/: __init__.py  ansatz.py  attention.py  diagnostics.py  encoding.py  kernel.py
tests/: conftest.py  test_ansatz.py  test_attention.py  test_circuit.py  test_data.py  test_density_matrix.py  test_detection_head.py  test_detector.py  test_diagnostics.py  test_distillation.py  test_encoding.py  test_gates.py  test_gradient.py  test_hybrid.py  test_kernel.py  test_kitti.py  test_layers.py  test_loss.py  test_measurement.py  test_noise.py  test_observables.py  test_optim.py  test_parameters.py  test_pipeline.py  test_qasm.py  test_reranker.py  test_statevector.py  test_utils.py
